# MPI-Master-Workers-Minimal

./: CMakeLists.txt  README.md
src/: main.cpp  mpi.hpp
